--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="hero-section">
     <div class="profile-image">
       <div class="gradient-border">
-        <img src="tgnas marathon.jpg" alt="Profile Photo" class="profile-photo">
+        <img src="tgnas bike profile for photo.jpg" alt="Profile Photo" class="profile-photo">
       </div>
     </div>
     <div class="intro-text">
