--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="TGNAS Portfolio - Showcasing innovation, creativity, and impact through projects, certifications, and competitive achievements.">
   <meta name="keywords" content="TGNAS, Akshay Srinivas, IoT, Smart Projects, CTF, ICPC, Portfolio, Engineer, Developer, Creative, Student">
   <meta name="author" content="Akshay Srinivas">
-  <title>TGNAS</title>
+  <title>Portfolio TGNAS</title>
   <link rel="stylesheet" href="style.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://cdn.tailwindcss.com"></script>
