--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
 
   <!-- Social Links -->
   <div class="mt-10 flex justify-center space-x-6">
-    <a href="www.linkedin.com/in/akshay-srinivas" target="_blank" class="text-[#00d3ff]/70 hover:text-[#00d3ff] transition"><i class="fab fa-linkedin text-2xl"></i></a>
+    <a href="https://www.linkedin.com/in/akshay-srinivas" target="_blank" class="text-[#00d3ff]/70 hover:text-[#00d3ff] transition"><i class="fab fa-linkedin text-2xl"></i></a>
     <a href="https://github.com/lolakshay" target="_blank" class="text-[#00d3ff]/70 hover:text-[#00d3ff] transition"><i class="fab fa-github text-2xl"></i></a>
     <a href="mailto:tgnascorp714@gmail.com" class="text-[#00d3ff]/70 hover:text-[#00d3ff] transition"><i class="fas fa-envelope text-2xl"></i></a>
   </div>
